--- a/at.html
+++ b/at.html
@@ -14,8 +14,8 @@
         
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-item nav-link" href="inicio.html"><img src="./recursos/hogar.png" class="img-icon"> Inicio <span class="sr-only">(current)</span></a>
-              <a class="nav-item nav-link active" href=""><img src="./recursos/menu.png" class="img-icon"> Avances Tecnologicos</a>
+              <a class="nav-item nav-link" href="index.html"><img src="./recursos/hogar.png" class="img-icon"> Inicio <span class="sr-only">(current)</span></a>
+              <a class="nav-item nav-link active" href="at.html"><img src="./recursos/menu.png" class="img-icon"> Avances Tecnologicos</a>
               <a class="nav-item nav-link" href="me.html"><img src="./recursos/informacion.png" class="img-icon"> Mi Perfil</a>
             </div>
         </div>
